# mcsp_cpp

./: CMakeLists.txt  main.cpp
benchmark/: SelectionQuery.cpp  SelectionQuery.h  SelectionQuerySet.h  SelectionTests.h
columnar/: ColTable.h  ColTable_2.h  MyHyper.h  MyMonetDB.h  MyMonetDB_II.h  Selecticity.h  SortedProjection.h
elf/: Elf.cpp  Elf.h  Elf_Dbms_Lvl.h  Elf_Dbms_Lvl_Cutoffs.h  Elf_Dbms_Lvl_Ranges.h  Elf_Table_Lvl_Cutoffs.h  Elf_builder_separate.h  Elf_table_lvl_seperate.h
elf_cutoff_external/: Elf_Dbms_Lvl_Cutoffs_External.h  Elf_Dbms_Lvl_Ranges_External.h  Elf_Table_Cutoff_External.h
general/: Config.h  DatabaseSystem.h  MCSP.h  Random.h  SCSP.h  SelectionQuery.h  SelectionQuerySet.h  SelectionTests.h  Synopsis.h  Table.h  Util.h
hot/: HOT.hpp
hot/libs/: CMakeLists.txt
hot/libs/hot/: CMakeLists.txt
hot/libs/hot/commons/include/hot/commons/: Algorithms.hpp  DiscriminativeBit.hpp  MultiMaskPartialKeyMapping.hpp
hot/libs/hot/single-threaded/include/hot/singlethreaded/: HOTSingleThreadedPayload.hpp  TIDSpan.hpp
hot/libs/idx/: CMakeLists.txt
rowise/: MyRowiseHyper.h  RowTable.h
